[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/UI/customization/chinese_label_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/Scene/Island/PlayerUI/PlayerUI.gd" type="Script" id=2]
[ext_resource path="res://src/UI/customization/listview/CommonListView.tscn" type="PackedScene" id=3]
[ext_resource path="res://assert/ui/InventoryPanelBg.png" type="Texture" id=4]
[ext_resource path="res://src/Scene/Island/PlayerUI/inventory/PlayerInventory.gd" type="Script" id=5]
[ext_resource path="res://assert/ui/SalesPanelBg.png" type="Texture" id=6]
[ext_resource path="res://src/Scene/Island/PlayerUI/inventory/GridBackPack.gd" type="Script" id=7]
[ext_resource path="res://src/Scene/Island/PlayerUI/inventory/EquipmentSlots.gd" type="Script" id=8]
[ext_resource path="res://src/Scene/Island/PlayerUI/PlayerStatusPanel.gd" type="Script" id=9]
[ext_resource path="res://src/Scene/Island/PlayerUI/inventory/SalesGrid.gd" type="Script" id=10]
[ext_resource path="res://src/Scene/Island/PlayerUI/inventory/MaterialGrid.gd" type="Script" id=11]
[ext_resource path="res://src/Scene/Island/PlayerUI/ActionProgressBar.gd" type="Script" id=12]
[ext_resource path="res://src/Scene/Island/PlayerUI/PlayeSales.gd" type="Script" id=13]
[ext_resource path="res://src/Scene/Island/PlayerUI/PlayeMake.gd" type="Script" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float value: hint_range(0, 100); // %
uniform float thickness: hint_range(0, 100) = 30.; // % thickness
uniform sampler2D fg: hint_albedo;
uniform sampler2D bg: hint_black_albedo;
uniform float offset: hint_range(0, 100); // %
uniform float smoothing: hint_range(0, 100) = 5.;

void fragment() {
	vec2 point = UV - vec2(0.5);
	float PI = 3.14159265358979323846;
	float ang = (1. - atan(point.x, point.y) / PI) * 50. - offset;
	if (ang < 0.)
		ang += 100.;
	float s = smoothing / 1000.;
	float k = PI / 2. / s;
	float r1 = .5 - thickness / 200.;
	float r2 = .5;
	float r = length(point);
	float uy = (r2 - r) / (r2 - r1);
	if (r > r2 || r < r1)
		COLOR.a = 0.;
	else {
		if (ang <= value) 
			COLOR = texture(fg, vec2(ang / 100., uy));
		else
			COLOR = texture(bg, vec2(ang / 100., uy));
		if ((r2 - r) < s)
			COLOR.a = sin((r2 - r) * k);
		if ((r - r1) < s)
			COLOR.a = sin((r - r1) * k);
	}
}"
custom_defines = ""

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.320339, 0.772881 )
colors = PoolColorArray( 0.811765, 0.160784, 0.160784, 1, 0.0588235, 0.121569, 0.537255, 1, 0.368627, 0.890196, 0.0745098, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/value = 100.0
shader_param/thickness = 45.0
shader_param/offset = 0.0
shader_param/smoothing = 5.0
shader_param/fg = SubResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "play"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
grow_vertical = 0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunctionButton1" type="Button" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 1 )
text = "1:属性"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunctionButton2" type="Button" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 1 )
text = "3:背包"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunctionButton3" type="Button" parent="HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 1 )
text = "2:交易"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FunctionButto4" type="Button" parent="HBoxContainer"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 1 )
text = "4:制造"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStatusPanel" type="WindowDialog" parent="."]
visible = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 72.4842
margin_top = -144.115
margin_right = 335.484
margin_bottom = 278.885
window_title = "playerstate"
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStatusPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentSlots" type="Control" parent="PlayerStatusPanel/VBoxContainer"]
margin_right = 263.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeleeWeapons" type="Panel" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots"]
margin_left = 30.2188
margin_top = 16.9446
margin_right = 90.2188
margin_bottom = 76.9446
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots/MeleeWeapons"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "近战"
align = 1
valign = 1

[node name="ThrowingWeapons" type="Panel" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots"]
margin_left = 101.344
margin_top = 15.2227
margin_right = 161.344
margin_bottom = 75.2227
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots/ThrowingWeapons"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "投掷"
align = 1
valign = 1

[node name="Armor" type="Panel" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots"]
margin_left = 175.385
margin_top = 14.6488
margin_right = 235.385
margin_bottom = 74.6488
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots/Armor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "服装"
align = 1
valign = 1

[node name="Packsack" type="Panel" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots"]
margin_left = 31.8706
margin_top = 84.395
margin_right = 91.8706
margin_bottom = 144.395
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots/Packsack"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "背包"
align = 1
valign = 1

[node name="Panel5" type="Panel" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots"]
margin_left = 102.996
margin_top = 82.673
margin_right = 162.996
margin_bottom = 142.673
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "2"
align = 1
valign = 1

[node name="Panel6" type="Panel" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots"]
margin_left = 177.037
margin_top = 82.099
margin_right = 237.037
margin_bottom = 142.099
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerStatusPanel/VBoxContainer/EquipmentSlots/Panel6"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "3"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerStatusPanel/VBoxContainer"]
margin_top = 154.0
margin_right = 263.0
margin_bottom = 423.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CommonListView" parent="PlayerStatusPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 129.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
is_auto_scroll = false

[node name="ParamsListView" parent="PlayerStatusPanel/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 133.0
margin_right = 263.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
is_auto_scroll = false

[node name="PlayerInventory" type="WindowDialog" parent="."]
visible = true
margin_left = 353.159
margin_top = 205.885
margin_right = 957.159
margin_bottom = 573.885
window_title = "package"
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="GridBackPack" type="TextureRect" parent="PlayerInventory"]
margin_left = 30.0
margin_top = 45.0
margin_right = 430.0
margin_bottom = 345.0
texture = ExtResource( 4 )
script = ExtResource( 7 )

[node name="Label" type="Label" parent="PlayerInventory"]
margin_left = 30.0
margin_right = 429.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "负重值：12/30"
valign = 1

[node name="Label3" type="Label" parent="PlayerInventory"]
margin_left = 456.0
margin_top = 50.0
margin_right = 580.0
margin_bottom = 342.0
custom_fonts/font = ExtResource( 1 )
text = "简介"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayeSales" type="WindowDialog" parent="."]
margin_left = 637.029
margin_top = 37.2156
margin_right = 885.029
margin_bottom = 444.216
window_title = "sales"
script = ExtResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="SalesGrid" type="TextureRect" parent="PlayeSales"]
margin_left = 12.6447
margin_top = 46.157
margin_right = 112.645
margin_bottom = 346.157
texture = ExtResource( 6 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayeSales"]
margin_left = 12.6447
margin_top = 1.15704
margin_right = 103.645
margin_bottom = 43.157
custom_fonts/font = ExtResource( 1 )
text = "自己"
valign = 1

[node name="ItemPanel2" type="TextureRect" parent="PlayeSales"]
margin_left = 128.925
margin_top = 45.0
margin_right = 228.925
margin_bottom = 345.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PlayeSales"]
margin_left = 128.925
margin_top = -3.05176e-05
margin_right = 219.925
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "对方"
valign = 1

[node name="FunctionButton4" type="Button" parent="PlayeSales"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 1 )
text = "成交"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayeMake" type="WindowDialog" parent="."]
margin_left = 883.217
margin_top = 140.416
margin_right = 1184.21
margin_bottom = 503.416
window_title = "Make"
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="MaterialGrid" type="TextureRect" parent="PlayeMake"]
margin_left = 12.6447
margin_top = 46.157
margin_right = 112.645
margin_bottom = 346.157
texture = ExtResource( 6 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayeMake"]
margin_left = 12.6447
margin_top = 1.15704
margin_right = 103.645
margin_bottom = 43.157
custom_fonts/font = ExtResource( 1 )
text = "原料"
valign = 1

[node name="ItemPanel2" type="TextureRect" parent="PlayeMake"]
margin_left = 183.941
margin_top = 50.4113
margin_right = 283.941
margin_bottom = 350.411
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PlayeMake"]
margin_left = 183.941
margin_top = 5.41135
margin_right = 274.941
margin_bottom = 47.4113
custom_fonts/font = ExtResource( 1 )
text = "制造物"
valign = 1

[node name="FunctionButton4" type="Button" parent="PlayeMake"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 1 )
text = "制造"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
margin_right = 8.0
margin_bottom = 9.0

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 96.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 1 )
items = [ "打开", null, 0, false, false, 0, 0, null, "", false, "关闭", null, 0, false, false, 1, 0, null, "", false, "拾取", null, 0, false, false, 2, 0, null, "", false, "攻击", null, 0, false, false, 3, 0, null, "", false, "投掷", null, 0, false, false, 4, 0, null, "", false, "存或取", null, 0, false, false, 5, 0, null, "", false, "采集", null, 0, false, false, 6, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu2" type="PopupMenu" parent="."]
margin_right = 96.0
margin_bottom = 73.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 1 )
items = [ "食用", null, 0, false, false, 0, 0, null, "", false, "分解", null, 0, false, false, 1, 0, null, "", false, "研究", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionProgressBar" type="Panel" parent="."]
visible = false
material = SubResource( 2 )
margin_right = 50.0
margin_bottom = 50.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActionProgressBar"]
anims/play = SubResource( 5 )
[connection signal="pressed" from="HBoxContainer/FunctionButton1" to="." method="_on_FunctionButton1_pressed"]
[connection signal="pressed" from="HBoxContainer/FunctionButton2" to="." method="_on_FunctionButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/FunctionButton3" to="." method="_on_FunctionButton3_pressed"]
[connection signal="pressed" from="HBoxContainer/FunctionButto4" to="." method="_on_FunctionButto4_pressed"]
[connection signal="slot_change" from="PlayerStatusPanel/VBoxContainer/EquipmentSlots" to="PlayerStatusPanel" method="_on_EquipmentSlots_slot_change"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="id_pressed" from="PopupMenu2" to="." method="_on_PopupMenu2_id_pressed"]
[connection signal="animation_finished" from="ActionProgressBar/AnimationPlayer" to="ActionProgressBar" method="_on_AnimationPlayer_animation_finished"]
